Fix artifact sidebar CSS spacing

--- a/sharing_portal/static/sharing_portal/artifacts.css
+++ b/sharing_portal/static/sharing_portal/artifacts.css
@@ -164,6 +164,7 @@
 
 .sidebarNav__separator {
     border-top: 2px solid var(--grey-light);
+    margin-top: 11px;
 } .sidebarNav__separator h4 {
     color: var(--accent-primary);
 }
@@ -171,6 +172,7 @@
 .sidebarNav__tags {
     flex: 1;
     text-align: left;
+    margin-bottom: 0.5rem;
 } .sidebarNav__tags > a {
     display: inline-block;
     background: var(--grey-light);
